# translation_app

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: app.rs  error.rs  lib.rs
src/components/: alert.rs  footer.rs  header.rs  mod.rs  nav.rs
src/routes/: about.rs  home.rs  mod.rs
src/routes/languages/: language_create.rs  language_edit.rs  language_list.rs  language_show.rs  mod.rs
src/routes/translation/: mod.rs  translation_create.rs  translation_edit.rs  translation_list.rs  translation_show.rs
src/services/: languages.rs  mod.rs  requests.rs  translations.rs
src/types/: languages.rs  mod.rs  translations.rs
static/: index.html  styles.scss
