[package]
authors = ["Marc Breitung <info@marcbreitung.de>"]
categories = ["wasm"]
description = "Translation App"
edition = "2018"
license = "Apache-2.0/MIT"
name = "translation_app"
readme = "./README.md"
repository = "https://github.com/marcbreitung/translation_app.git"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
yew = "0.17.3"
yew-router = { version="0.14.0", features = ["web_sys"] }
wasm-bindgen = "0.2.64"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
dotenv_codegen = "0.15.0"
yew_base_components = { git = "https://github.com/marcbreitung/yew_base_components" } 

[dev-dependencies]
wasm-bindgen-test = "0.3.14"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
